# summit

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
examples/: hello  hello.c  hello.sm
examples/abi-example/: Summit.toml
examples/abi-example/src/: main.sm
examples/basic_input/: Summit.toml
examples/basic_input/src/: main.sm
examples/enums/: Summit.toml
examples/enums/src/: main.sm
examples/expect_statements/: Summit.toml
examples/expect_statements/src/: main.sm
examples/fibonacci/: Summit.toml
examples/fibonacci/src/: main.sm
examples/for_loops/: Summit.toml
examples/for_loops/src/: main.sm
examples/functions/: Summit.toml
examples/functions/src/: main.sm
examples/global_variables/: Summit.toml
examples/global_variables/src/: main.sm
examples/hello_world/: Summit.toml
examples/hello_world/src/: main.sm
examples/if_statements/: Summit.toml
examples/if_statements/src/: main.sm
examples/structs/: Summit.toml
examples/structs/src/: main.sm
examples/types/: Summit.toml
examples/variables/: Summit.toml
examples/when_statements/: Summit.toml
examples/while_loops/: Summit.toml
libsummit/: Makefile
libsummit/include/: freestanding.h  io.h  string_utils.h
src/: main.rs
src/analysis/: mod.rs
src/commands/: build.rs  clean.rs  mod.rs  new.rs  run.rs
src/compiler/: compilation_pipeline.rs  mod.rs
src/config/: mod.rs  summit_config.rs
src/frontend/: mod.rs
src/utils/: args.rs  io_path_matcher.rs  mod.rs  path.rs  type_resolver.rs  type_utils.rs
stdlib/: Makefile  freestanding.h  io.c
(+60 files in other folders)
